--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2015",
-    "module": "ES6",
-    "outDir": "./dist",
+    "module": "none",           
+    "outDir": "./",
     "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
